--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-lg-2 text-center text-lg-left">
                     <!-- logo -->
-                    <a href="./index.html" class="site-logo">
+                    <a href="index.html" class="site-logo">
                         <img src="img/logo.png" alt="">
                     </a>
                 </div>
