--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="col-lg-2 text-center text-lg-left">
                     <!-- logo -->
                     <a href="index.html" class="site-logo">
-                        <img src=img/Logo.png" alt="">
+                        <img src="img/Logo.png" alt="">
                     </a>
                 </div>
                 <div class="col-xl-6 col-lg-5">
